--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.2.5",
     "dotenv": "^16.4.5",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
