--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^3.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
