--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
+    "start": "app.js",
+    "dev": "app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +16,8 @@
     "@clerk/clerk-sdk-node": "^5.0.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.4"
   }
 }
