--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "dependencies": {
     "express": "^4.19.2",
     "mysql2": "^3.10.1"
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.1.0",
+    "@eslint/js": "^9.6.0",
+    "eslint": "^9.6.0",
+    "eslint-plugin-react": "^7.34.3",
+    "globals": "^15.8.0"
   }
 }
