--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^3.0.5",
     "mercadopago": "^2.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
