--- a/client/package.json
+++ b/client/package.json
@@ -15,15 +15,17 @@
     "@emotion/styled": "^11.11.5",
     "@mercadopago/sdk-js": "^0.0.3",
     "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
+    "@mui/material": "^5.16.1",
     "@mui/x-charts": "^7.9.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.5",
     "mercadopago": "^2.0.11",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0"
   },
